fix navigation overlap. Change description layout. Max image size, minor fixes

--- a/css/style.css
+++ b/css/style.css
@@ -118,16 +118,19 @@ footer {
 
 .container {
   display: grid;
-  grid-template-columns: 2fr 1fr;
-  gap: 10px;
+  /* grid-template-columns: 3fr 2fr; */
+  grid-template-columns: minmax(min-content, max-content) 300px;
+  gap: 30px;
 }
 
 .box {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 1.2em;
 }
-
-@media only screen and (max-width: 600px) {
+.box img {
+  width: 500px;
+}
+@media only screen and (max-width: 800px) {
   .container {
     display: grid;
     grid-template-columns: 1fr;
@@ -136,6 +139,10 @@ footer {
   }
   .box {
     font-size: 1em;
+  }
+
+  .box-top {
+    padding-top: 30px;
   }
   /* Make all menu links full width */
   ul li,
